# gtk-counter

./: README.md  io.github.exgleowl.Counter.json  meson.build
data/: io.github.exgleowl.Counter.desktop.in  io.github.exgleowl.Counter.gschema.xml  io.github.exgleowl.Counter.metainfo.xml.in  io.github.exgleowl.Counter.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in
src/: application.vala  counter.gresource.xml  main.vala  meson.build  window.ui  window.vala
